--- a/playgrounds/vanilla/src/main.css
+++ b/playgrounds/vanilla/src/main.css
@@ -351,3 +351,17 @@ meter {
     color-scheme: dark;
   }
 }
+
+html {
+  height: 100dvh;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100%;
+}
+
+#app {
+  padding: 1rem;
+  height: 100%;
+}
